kubernetes/tpi/apps/default/kasm/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kasm
  annotations:
    # traefik.ingress.kubernetes.io/service.serversscheme: https
    # traefik.ingress.kubernetes.io/service.serverstransport: networking-insecureskipverify@kubernetescrd
spec:
  externalName: 192.168.13.214
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  sessionAffinity: None
  type: ExternalName
